--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>KanjiSnake</title>
+    <title>The KanjiSnake</title>
     <style>
         html,
         body,
