--- a/index.html
+++ b/index.html
@@ -7,47 +7,52 @@
     <title>The KanjiSnake</title>
     <style>
         html,
-        body,
-        canvas {
+        body {
             margin: 0;
             padding: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden;
-            position: absolute;
             background: black;
-            z-index: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        canvas {
+            background: black;
+            display: block;
         }
     </style>
 </head>
 
 <body>
-    <canvas id="glcanvas" tabindex='0'></canvas>
-    <!-- Minified and statically hosted version of https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js -->
+    <canvas id="glcanvas" tabindex="0"></canvas>
+
+    <!-- Macroquad runtime -->
     <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
-    <!--<script>load("kanjisnake.wasm");</script> <!-- Your compiled WASM binary -->-->
     <script>
         const my_canvas = document.getElementById("glcanvas");
-        my_canvas.focus();  // Make sure the canvas is focused at start
+        my_canvas.focus();  // Focus on load
 
-        // Refocus if the player clicks inside the canvas
+        // Always resize canvas to be a centered square
+        function resizeCanvas() {
+            const size = Math.min(window.innerWidth, window.innerHeight);
+            my_canvas.width = size;
+            my_canvas.height = size;
+            my_canvas.style.width = size + "px";
+            my_canvas.style.height = size + "px";
+        }
+
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
+
+        // Refocus when clicking the canvas
         my_canvas.addEventListener("click", () => my_canvas.focus());
 
-        // Now load the Macroquad game
+        // Load your Macroquad game
         load("kanjisnake.wasm");
     </script>
 </body>
 
 </html>
-<!--
-<canvas id="game" tabindex="0"></canvas>
-<script type="module">
-    import init from './your_game.js';
-
-    const canvas = document.getElementById('game');
-    canvas.focus(); // ensure focus on load
-
-    canvas.addEventListener('click', () => canvas.focus()); // refocus on click
-    init();
-</script>
--->
